--- a/templates/index.html
+++ b/templates/index.html
@@ -601,7 +601,7 @@
                 analyzeBtn.disabled = true;
                 analyzeBtn.textContent = "Анализ...";
                 
-                let response = await fetch("http://127.0.0.1:5000/upload", { 
+                let response = await fetch("/upload", { 
                     method: "POST", 
                     body: formData 
                 });
